--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ pnpm-debug.log*
 lerna-debug.log*
 
 # Dependencies
-node_modules/*
+node_modules
 .yarn/*
 !.yarn/patches
 !.yarn/plugins
@@ -57,3 +57,6 @@ tsconfig.tsbuildinfo
 .yarn/unplugged
 .yarn/build-state.yml
 .yarn/install-state.gz
+
+
+node_modules
