--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^6.0.0-alpha.12",
     "@mui/system": "^6.0.0-alpha.12",
+    "@tanstack/react-router": "^1.115.2",
+    "@tanstack/router-devtools": "^1.115.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
