--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^6.0.0-alpha.12",
+    "@mui/material": "^7.0.1",
     "@mui/system": "^6.0.0-alpha.12",
     "@supabase/supabase-js": "^2.49.4",
     "@tanstack/react-query": "^5.72.0",
