--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,8 @@
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
 		"declaration": false,
-		"outDir": "./dist"
+		"outDir": "./dist",
+		"types": ["vite/client"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules", "dist"],
